[project]
name = "reddit-search-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.4.1",
    "faiss-cpu>=1.13.1",
    "flash-attention>=1.0.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "langchain-text-splitters>=1.1.0",
    "mcp[cli]>=1.25.0",
    "nltk>=3.9.2",
    "openai>=2.13.0",
    "pandas>=2.3.3",
    "peft>=0.18.0",
    "pillow>=12.0.0",
    "sentence-transformers>=5.2.0",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
    "zstandard>=0.25.0",
]
